[package]
name = "messenger-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
messenger-protocol = { version = "0.1.0", path = "../messenger-protocol" }
tokio = { version = "1.29.1", features = ["full"] }
